Changed class names

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,18 +5,18 @@ set_target_properties(labellib PROPERTIES OUTPUT_NAME "label")
 target_sources(
     labellib
     PRIVATE
-        "label.h"
-        "simpleLabel.h"
-        "simpleLabel.cpp"
-        "richLabel.h"
-        "richLabel.cpp"
+        "Label.h"
+        "SimpleLabel.h"
+        "SimpleLabel.cpp"
+        "RichLabel.h"
+        "RichLabel.cpp"
 )
 
 
 # Executable target for the application
 add_executable(application)
 
-set_target_properties(application PROPERTIES OUTPUT_NAME "label")
+set_target_properties(application PROPERTIES OUTPUT_NAME "labelEditor")
 
 target_link_libraries(
     application
