--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,6 +13,7 @@ target_sources(
     PRIVATE
         "test-rich-label.cpp"
         "test-transformations.cpp"
+        "test-label-decorator.cpp"
 )
 
 # Automatically register all tests
