Added CompositeTransformation class and more tags to tests

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,6 +32,8 @@ target_sources(
         "RichLabelDecorator.cpp"
         "RandomTransformDecorator.h"
         "RandomTransformDecorator.cpp"
+        "CompositeTransformation.h"
+        "CompositeTransformation.cpp"
 )
 
 
